fix: ensure calendar table honor cell spacing

--- a/packages/veui-theme-dls/components/calendar.less
+++ b/packages/veui-theme-dls/components/calendar.less
@@ -229,6 +229,7 @@
   &-table {
     flex-grow: 1;
     table-layout: fixed;
+    border-collapse: separate;
     border-spacing: @dls-date-picker-day-cell-spacing-x
       @dls-date-picker-day-cell-spacing-y;
 
